# langchain_learning

./: pyproject.toml
1-LLMs/: llm_demo.py
2-ChatModels/: chatmodel.py  chatmodel2.py
3-EmbeddingModels/: embedding.py  embedding2.py  semantic_search.py
